# gpui-navi

./: Cargo.toml  README.md  justfile  state_new.rs
docs/: ARCHITECTURE.md  better-devtools.md  better-dx.md  feature-parity-detailed-plan.md  feature-parity.md  long-term-dx.md  nexum-plan.md  nexum-spec.md  quoin-mig.md  v0.2.0.md  v0.3.0.md
docs/backends/: brainstorm.md  dioxus.md  floem.md  xilem.md
docs/reports/: 0.md
example-app/: Cargo.toml  build.rs  navi.config.json  setup.sh
example-app/src/: main.rs  route_tree.gen.rs
example-app/src/routes/: $.rs  __root.rs  about.rs  awaited.rs  blocking.rs  context.rs  index.rs  lifecycle.rs  login.rs  meta.rs  mod.rs  root.rs  scroll.rs  settings.rs  users.rs
example-app/src/routes/(marketing)/: about.rs
example-app/src/routes/_auth/: mod.rs  profile.rs
example-app/src/routes/admin/: dashboard.rs  mod.rs
example-app/src/routes/dashboard/: analytics.rs  index.rs  mod.rs  settings.rs
example-app/src/routes/docs/: $.rs  mod.rs  param_.rs
example-app/src/routes/users/: $.rs  $id.rs  _dollar_id.rs  index.rs  mod.rs  param_id.rs  {-}.rs
example-app/src/routes/validation-test/: garde.rs  index.rs  mod.rs  valico.rs  validator.rs  validify.rs
navi-codegen/: Cargo.toml
navi-codegen/src/: config.rs  generator.rs  lib.rs  main.rs  scanner.rs  scanner.rs.patch
navi-core/: Cargo.toml
navi-core/src/: context.rs  lib.rs  suspense.rs
navi-devtools/: Cargo.toml
navi-devtools/src/: deep_link_view.rs  devtools.rs  lib.rs  timeline.rs
navi-macros/: Cargo.toml
navi-macros/src/: hooks.rs  lib.rs  route.rs  router.rs
navi-router/: Cargo.toml
navi-router-core/: Cargo.toml
navi-router-core/src/: blocker.rs  core.rs  history.rs  lib.rs  location.rs  redirect.rs  route_tree.rs  state_types.rs  validation.rs
navi-router/src/: blocker.rs  deep_link.rs  event_bus.rs  history.rs  lib.rs  loader.rs  loader_query.rs  location.rs  matcher.rs  navigator.rs  radix_tree.rs  radix_tree.rs.orig  radix_tree.rs.rej  redirect.rs  route_tree.rs  state.rs  state.rs.bak  state.rs.orig  state.rs.rej  state.rs.rej.orig  validation.rs
navi-router/src/components/: awaited.rs  awaited.rs.bak  catch_boundary.rs  link.rs  mod.rs  outlet.rs  router_provider.rs  scroll_restoration.rs  suspense_boundary.rs
navi-test/: Cargo.toml
navi-test/tests/: integration.rs
src/: route_tree.gen.rs
stubs/history-navigation/: Cargo.toml
stubs/history-navigation/src/: lib.rs
