[workspace]
resolver = "2"
members = [
    "navi-test",
    "stubs/history-navigation",
    "navi-core",
    "navi-router",
    "navi-macros",
    "navi-codegen",
    "navi-devtools",
    "example-app",
    "navi-router-core",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
