[package]
name = "example-app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
gpui = "0.2.2"
gpux = { git = "https://github.com/fukayatti/gpux" }
gpui-component = "0.5.1"
navi-core = { path = "../navi-core" }
navi-router = { path = "../navi-router" }
navi-devtools = { path = "../navi-devtools" }
navi-macros = { path = "../navi-macros" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[build-dependencies]
navi-codegen = { path = "../navi-codegen" }
