[package]
name = "example-app"
version.workspace = true
edition = "2024"
build = "build.rs"

[package.metadata.bundle]
name = "Navi GPUI Example"
identifier = "com.navi.example-app"
icon = ["icon.png"]
version.workspace = true
copyright = "MIT"
category = "public.app-category.developer-tools"
short_description = "Navi GPUI Example"
long_description = "Example application for Navi in GPUI."
osx_url_schemes = ["naviapp"]

[dependencies]
gpui = { workspace = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
rs-query = { git = "https://github.com/elcoosp/rs-query" }

gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
navi-core = { path = "../navi-core" }
navi-router = { path = "../navi-router" }
navi-devtools = { path = "../navi-devtools" }
navi-macros = { path = "../navi-macros" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
seahash = "4.1"
env_logger = "0.11"
# Validation crate integrations (optional, for testing)
validator = { version = "0.20", features = ["derive"], optional = true }
garde = { version = "0.22.1", features = ["derive"], optional = true }
validify = { version = "1.3", optional = true }
valico = { version = "4.0", optional = true }
schemars = { version = "1.0", optional = true }

[features]
nexum = ["navi-router/nexum", "navi-devtools/nexum"]
default = []
validator = ["navi-router/validator", "dep:validator"]
garde = ["navi-router/garde", "dep:garde"]
validify = ["navi-router/validify", "dep:validify"]
valico = ["navi-router/valico", "dep:valico", "dep:schemars"]

# Enable all for testing
[build-dependencies]
navi-codegen = { path = "../navi-codegen" }
