# navi-codegen/Cargo.toml
[package]
name = "navi-codegen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "navi-codegen"
path = "src/main.rs"

[dependencies]
walkdir = "2.4"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
