[package]
name = "navi-devtools"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
gpux = { git = "https://github.com/fukayatti/gpux" }
gpui-component = "0.5.1"
navi-core = { path = "../navi-core" }
navi-router = { path = "../navi-router" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
