[package]
name = "navi-devtools"
version.workspace = true
edition = "2024"

[dependencies]
gpui = { workspace = true }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

rs-query = { git = "https://github.com/elcoosp/rs-query", features = ["devtools"] }
navi-core = { path = "../navi-core" }
navi-router = { path = "../navi-router" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"

once_cell = "1.19"

# For nexum feature
tokio = { version = "1", features = ["sync"], optional = true }

[features]
nexum = ["navi-router/nexum", "dep:tokio"]
