[package]
name = "navi-router-core"
version.workspace = true
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
log = "0.4"
seahash = "4.1"
url = "2.5"
serde_qs = "0.12"
history-navigation = { path = "../stubs/history-navigation" }

# Validation crate integrations (optional)
validator = { version = "0.20", features = ["derive"], optional = true }
garde = { version = "0.22.1", features = ["derive"], optional = true }
validify = { version = "1.3", optional = true }
valico = { version = "4.0", optional = true }
schemars = { version = "1.0", optional = true }

[features]
default = []
validator = ["dep:validator"]
garde = ["dep:garde"]
validify = ["dep:validify"]
valico = ["dep:valico", "dep:schemars"]
