[package]
name = "navi-router"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpux = { git = "https://github.com/fukayatti/gpux" }
gpui-component = "0.5.1"
navi-core = { path = "../navi-core" }
history-navigation = { path = "../stubs/history-navigation" }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
rs-query = "0.0.1"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
log = "0.4"
seahash = "4.1"
once_cell = "1.19"
# Validation crate integrations (optional)
validator = { version = "0.20", features = ["derive"], optional = true }
garde = { version = "0.22.1",features = ["derive"], optional = true }
validify = { version = "1.3", optional = true }
valico = { version = "4.0", optional = true }
schemars = { version = "0.8", optional = true }
[features]
default = []
validator = ["dep:validator"]
garde = ["dep:garde"]
validify = ["dep:validify"]

valico = ["dep:valico", "dep:schemars"]
