[package]
name = "navi-router"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

navi-core = { path = "../navi-core" }
history-navigation = { path = "../stubs/history-navigation" }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
log = "0.4"
seahash = "4.1"
once_cell = "1.19"
# Validation crate integrations (optional)
validator = { version = "0.20", features = ["derive"], optional = true }
garde = { version = "0.22.1",features = ["derive"], optional = true }
validify = { version = "1.3", optional = true }
valico = { version = "4.0", optional = true }
schemars = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }
rs-query = { git = "https://github.com/elcoosp/rs-query", features = ["devtools"] }

[features]
default = []
validator = ["dep:validator"]
garde = ["dep:garde"]
validify = ["dep:validify"]

valico = ["dep:valico", "dep:schemars"]
